[package]
name = "orator-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
axum = "0.7.5"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.1" }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.6.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.6.1" }
clap = {version = "4.5.17", features = ["derive"]}
hf-hub = "0.3.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokenizers = "0.20.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
